[gd_scene load_steps=4 format=3 uid="uid://ce0o66smctqbt"]

[ext_resource type="PackedScene" uid="uid://cmekr0guqqnyd" path="res://elements/npc/npc_basic_regular.tscn" id="1_j4yi4"]
[ext_resource type="Script" uid="uid://blc4goicd8hjf" path="res://elements/npc/npc_talking_alone.gd" id="1_t66ar"]
[ext_resource type="Script" uid="uid://bkt3i1q8w53tl" path="res://modules/text_flow/quick_dialogue.gd" id="2_t66ar"]

[node name="NpcTalkingAlone" type="Node3D"]
script = ExtResource("1_t66ar")

[node name="Npc_Basic" parent="." instance=ExtResource("1_j4yi4")]

[node name="QuickDialogue" type="Node3D" parent="." node_paths=PackedStringArray("needs_in_screen")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
script = ExtResource("2_t66ar")
voice = 0
needs_in_screen = NodePath("../Npc_Basic/VisibleOnScreenNotifier3D")
delay = 0.5
metadata/_custom_type_script = "uid://bkt3i1q8w53tl"

[connection signal="dead" from="Npc_Basic/HitArea/Health" to="." method="_on_health_dead"]
[connection signal="speech_end" from="QuickDialogue" to="Npc_Basic" method="_on_bubble_finished"]
[connection signal="speech_start" from="QuickDialogue" to="." method="_on_quick_dialogue_speech_start"]
[connection signal="speech_start" from="QuickDialogue" to="Npc_Basic" method="_on_bubble_started"]

[editable path="Npc_Basic"]
[editable path="Npc_Basic/NPC_Graphic_Regular"]
[editable path="Npc_Basic/NPC_Graphic_Regular/NPC_HighContrastSprite"]
